# mtype-box2d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mtpkg.json
.claude/: settings.local.json
include/: PluginHostApi.h
mt/demo/: demo_bouncing.mt  demo_debug_draw.mt  demo_events.mt  demo_joints.mt  demo_smoke.mt
mt/lib/: Body.mt  Box2D.mt  DebugDraw.mt  Joint.mt  Query.mt  Shape.mt
src/: BindingHelpers.hpp  BodyBindings.cpp  DebugDrawBindings.cpp  DefBindings.cpp  EventBindings.cpp  HandleRegistry.hpp  IdConvert.hpp  JointBindings.cpp  MathBindings.cpp  PluginEntry.cpp  PluginGlobals.hpp  QueryBindings.cpp  ShapeBindings.cpp  WorldBindings.cpp  WorldState.hpp
